Add classes to annotation sectional elements

--- a/h/static/styles/annotations.scss
+++ b/h/static/styles/annotations.scss
@@ -19,9 +19,9 @@
     }
   }
 
-  header { margin-bottom: .8em }
-  section { margin: .8em 0 }
-  footer { margin-top: .8em }
+  .annotation-header { margin-bottom: .8em }
+  .annotation-section { margin: .8em 0 }
+  .annotation-footer { margin-top: .8em }
 
   .user {
     font-weight: bold;
