--- a/h/templates/annotation.html
+++ b/h/templates/annotation.html
@@ -20,9 +20,12 @@
   </span>
 
   <!-- Timestamp -->
-  <fuzzytime class="small pull-right"
-             ng-show="!vm.editing && vm.annotation.updated"
-             ng-model="vm.annotation.updated"></fuzzytime>
+  <a class="annotation-timestamp small pull-right"
+     target="_blank"
+     title="{{vm.annotation.update | moment:'LLLL'}}"
+     ng-if="!vm.editing && vm.annotation.updated"
+     ng-href="{{baseURI}}a/{{vm.annotation.id}}"
+     >{{vm.annotation.updated | fuzzyTime | date : mediumDate}}</a>
 </header>
 
 <!-- Excerpts -->
