Always show share/edit/etc to reduce jumpiness
Re-introduce the flash messages when attempting to reply to and
share unsaved annotations. Doing so is better than hiding them
because hiding them results in newly created annotations changing
layout when the id is returned from the server.

--- a/h/templates/annotation.html
+++ b/h/templates/annotation.html
@@ -113,7 +113,7 @@
 <!-- / Tags -->
 
 <footer class="form-actions" ng-switch="vm.action">
-  <div ng-show="vm.annotation.id" ng-switch-when="view">
+  <div ng-switch-when="view">
     <a class="small magicontrol" href="" title="Reply"
        ng-click="vm.reply()"
        ><i class="icon-reply"></i> Reply</a>
