Remove the blur event on the share URL
The blur handler stops the image anchor from receiving its click
event, preventing it from working. Rather than installing our own
mousedown handlers on the links or moving the blur to be a click
or mousedown higher in the DOM, just remove it for now.

--- a/h/templates/annotation.html
+++ b/h/templates/annotation.html
@@ -135,10 +135,7 @@
          target="_blank"
          ng-href="{{baseURI}}a/{{vm.annotation.id}}"></a>
       <div>
-        <input type="text"
-               ng-blur="vm.toggleShared()"
-               value="{{baseURI}}a/{{vm.annotation.id}}"
-               readonly>
+        <input type="text" value="{{baseURI}}a/{{vm.annotation.id}}" readonly>
       </div>
     </div>
   </div>
