Fix bugs by getting rid of a bad idea. Tighten up styles.

--- a/h/static/styles/annotations.scss
+++ b/h/static/styles/annotations.scss
@@ -43,7 +43,12 @@
 }
 
 
-// Markdown Controls ////////////////////////
+// Markdown Editor Controls ////////////////////////
+privacy {
+  position: relative;
+  top: 2px;
+}
+
 .markdown {
   .preview {
     overflow: auto;
