--- a/h/templates/privacy.html
+++ b/h/templates/privacy.html
@@ -3,7 +3,7 @@
         role="button"
         class="dropdown-toggle"
         data-toggle="dropdown">
-        <i class="small" ng-class="{'icon-earth': level == 'Public', 'icon-locked': level == 'Only Me'}"></i>
+        <i class="small"></i>
         {{level}}
         <i class="icon-triangle"></i>
   </span>
