--- a/h/templates/annotation.html
+++ b/h/templates/annotation.html
@@ -5,6 +5,7 @@
   <!-- User -->
   <span ng-if="!vm.editing && vm.annotation.user">
     <a class="annotation-user"
+       target="_blank"
        ng-href="{{baseURI}}u/{{vm.annotation.user}}"
        >{{vm.annotation.user | persona}}</a>
     <i class="small icon-locked" ng-show="vm.isPrivate()"></i>
