Rename things, fix embarassing spelling error.

--- a/h/static/styles/annotations.scss
+++ b/h/static/styles/annotations.scss
@@ -43,7 +43,7 @@
 }
 
 
-// Markdown Editor Controls ////////////////////////
+//MARKDOWN EDITOR CONTROLS//////////////////////////
 [markdown] {
   .preview {
     overflow: auto;
@@ -94,7 +94,7 @@
 }
 
 
-// Privacy Controll /////////////////////////
+//PRIVACY CONTROL////////////////////////////
 privacy {
   position: relative;
   top: 2px;
