--- a/h/static/icomoon.css
+++ b/h/static/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'h';
-	src:url('fonts/h.eot?-vhf443');
-	src:url('fonts/h.eot?#iefix-vhf443') format('embedded-opentype'),
-		url('fonts/h.woff?-vhf443') format('woff'),
-		url('fonts/h.ttf?-vhf443') format('truetype'),
-		url('fonts/h.svg?-vhf443#h') format('svg');
+	src:url('fonts/h.eot?-ayhuwk');
+	src:url('fonts/h.eot?#iefix-ayhuwk') format('embedded-opentype'),
+		url('fonts/h.woff?-ayhuwk') format('woff'),
+		url('fonts/h.ttf?-ayhuwk') format('truetype'),
+		url('fonts/h.svg?-ayhuwk#h') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -23,38 +23,8 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.icon-markdown:before {
-	content: "\e60e";
-}
-.icon-minus:before {
-	content: "\e60d";
-}
-.icon-users:before {
-	content: "\e603";
-}
-.icon-user:before {
-	content: "\e604";
-}
-.icon-bullhorn:before {
-	content: "\e605";
-}
-.icon-bubbles:before {
-	content: "\e606";
-}
-.icon-bubbles2:before {
-	content: "\e607";
-}
-.icon-bell:before {
-	content: "\e608";
-}
-.icon-earth:before {
-	content: "\e609";
-}
-.icon-link:before {
-	content: "\e60a";
-}
-.icon-search:before {
-	content: "\e60c";
+.icon-math:before {
+	content: "\e615";
 }
 .icon-window:before {
 	content: "\2e";
@@ -253,4 +223,73 @@
 }
 .icon-icon-comment:before {
 	content: "\e60b";
+}
+.icon-quote:before {
+	content: "\e61b";
+}
+.icon-bold2:before {
+	content: "\e618";
+}
+.icon-italic2:before {
+	content: "\e616";
+}
+.icon-image2:before {
+	content: "\e613";
+}
+.icon-numlist:before {
+	content: "\e60f";
+}
+.icon-ulist:before {
+	content: "\e610";
+}
+.icon-code:before {
+	content: "\e611";
+}
+.icon-markdown:before {
+	content: "\e60e";
+}
+.icon-minus:before {
+	content: "\e60d";
+}
+.icon-users:before {
+	content: "\e603";
+}
+.icon-user:before {
+	content: "\e604";
+}
+.icon-bullhorn:before {
+	content: "\e605";
+}
+.icon-bubbles:before {
+	content: "\e606";
+}
+.icon-bubbles2:before {
+	content: "\e607";
+}
+.icon-bell:before {
+	content: "\e608";
+}
+.icon-earth:before {
+	content: "\e609";
+}
+.icon-link:before {
+	content: "\e60a";
+}
+.icon-search:before {
+	content: "\e60c";
+}
+.icon-quote2:before {
+	content: "\e61a";
+}
+.icon-bold:before {
+	content: "\e619";
+}
+.icon-italic:before {
+	content: "\e617";
+}
+.icon-image:before {
+	content: "\e614";
+}
+.icon-code2:before {
+	content: "\e612";
 }
