--- a/h/static/icomoon.css
+++ b/h/static/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'h';
-	src:url('fonts/h.eot?-ayhuwk');
-	src:url('fonts/h.eot?#iefix-ayhuwk') format('embedded-opentype'),
-		url('fonts/h.woff?-ayhuwk') format('woff'),
-		url('fonts/h.ttf?-ayhuwk') format('truetype'),
-		url('fonts/h.svg?-ayhuwk#h') format('svg');
+	src:url('fonts/h.eot?-b10uo5');
+	src:url('fonts/h.eot?#iefix-b10uo5') format('embedded-opentype'),
+		url('fonts/h.woff?-b10uo5') format('woff'),
+		url('fonts/h.ttf?-b10uo5') format('truetype'),
+		url('fonts/h.svg?-b10uo5#h') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -26,9 +26,6 @@
 .icon-math:before {
 	content: "\e615";
 }
-.icon-window:before {
-	content: "\2e";
-}
 .icon-triangle:before {
 	content: "\2f";
 }
@@ -41,41 +38,11 @@
 .icon-cancel:before {
 	content: "\38";
 }
-.icon-checkmark_icon:before {
-	content: "\39";
-}
-.icon-checkbox_checked_icon:before {
-	content: "\3f";
-}
-.icon-triangle2:before {
-	content: "\3c";
-}
-.icon-unlocked:before {
-	content: "\e000";
-}
 .icon-locked:before {
 	content: "\e001";
 }
-.icon-views:before {
-	content: "\e002";
-}
-.icon-browser:before {
-	content: "\e003";
-}
-.icon-trileft:before {
-	content: "\e00a";
-}
 .icon-comment:before {
 	content: "\e00b";
-}
-.icon-comment2:before {
-	content: "\e00c";
-}
-.icon-comment22:before {
-	content: "\e00e";
-}
-.icon-comment23:before {
-	content: "\e00d";
 }
 .icon-settings:before {
 	content: "\e00f";
@@ -83,158 +50,29 @@
 .icon-plus:before {
 	content: "\e012";
 }
-.icon-plus-sign:before {
-	content: "\f0fe";
-}
-.icon-eye:before {
-	content: "\e016";
-}
-.icon-magic:before {
-	content: "\f0d0";
-}
-.icon-eye2:before {
-	content: "\e017";
-}
-.icon-download:before {
-	content: "\e018";
-}
-.icon-comment24:before {
-	content: "\e013";
-}
-.icon-comment25:before {
-	content: "\e01e";
-}
-.icon-pen_1:before {
+.icon-pen:before {
 	content: "\27";
 }
 .icon-flag:before {
 	content: "\28";
 }
-.icon-delete_icon:before {
-	content: "\29";
-}
-.icon-heart_empty_icon:before {
-	content: "\2b";
-}
-.icon-heart_icon:before {
-	content: "\2c";
-}
-.icon-window2:before {
-	content: "\2d";
-}
 .icon-export:before {
 	content: "\2a";
 }
-.icon-checkbox_unchecked_icon:before {
-	content: "\3e";
-}
-.icon-star_fav_empty_icon:before {
-	content: "\e006";
-}
-.icon-triright:before {
-	content: "\e009";
-}
-.icon-eye-open:before {
-	content: "\f06e";
-}
-.icon-comments:before {
-	content: "\e011";
-}
-.icon-highlighter-blacktip:before {
-	content: "\e01c";
-}
-.icon-highlighter-01:before {
-	content: "\e019";
-}
-.icon-highlighter-nolines:before {
-	content: "\e01a";
-}
-.icon-eye3:before {
-	content: "\e015";
-}
-.icon-highlighter:before {
-	content: "\e01d";
-}
-.icon-eye4:before {
+.icon-visible:before {
 	content: "\e01b";
-}
-.icon-wrench:before {
-	content: "\e020";
-}
-.icon-commentflip:before {
-	content: "\e010";
-}
-.icon-hyp-logo4:before {
-	content: "\e014";
-}
-.icon-eye-close:before {
-	content: "\f070";
-}
-.icon-star_fav_icon:before {
-	content: "\e005";
 }
 .icon-reply:before {
 	content: "\e004";
 }
-.icon-ddbutton_empty:before {
-	content: "\e008";
-}
-.icon-ddbutton_filled:before {
-	content: "\e007";
-}
 .icon-checkmark:before {
-	content: "\3a";
-}
-.icon-cog:before {
-	content: "\3d";
-}
-.icon-checkmark2:before {
 	content: "\35";
 }
-.icon-clock:before {
-	content: "\37";
-}
-.icon-clipboard_copy_icon:before {
-	content: "\26";
-}
-.icon-export_icon:before {
-	content: "\25";
-}
-.icon-uni24:before {
-	content: "\24";
-}
-.icon-uni23:before {
-	content: "\23";
-}
-.icon-cog2:before {
-	content: "\22";
-}
-.icon-uniF000:before {
-	content: "\f000";
-}
-.icon-comment3:before {
-	content: "\e600";
-}
-.icon-highlighter2:before {
+.icon-highlighter:before {
 	content: "\e601";
-}
-.icon-visible:before {
-	content: "\e602";
-}
-.icon-icon-comment:before {
-	content: "\e60b";
 }
 .icon-quote:before {
 	content: "\e61b";
-}
-.icon-bold2:before {
-	content: "\e618";
-}
-.icon-italic2:before {
-	content: "\e616";
-}
-.icon-image2:before {
-	content: "\e613";
 }
 .icon-numlist:before {
 	content: "\e60f";
@@ -257,18 +95,6 @@
 .icon-user:before {
 	content: "\e604";
 }
-.icon-bullhorn:before {
-	content: "\e605";
-}
-.icon-bubbles:before {
-	content: "\e606";
-}
-.icon-bubbles2:before {
-	content: "\e607";
-}
-.icon-bell:before {
-	content: "\e608";
-}
 .icon-earth:before {
 	content: "\e609";
 }
@@ -278,9 +104,6 @@
 .icon-search:before {
 	content: "\e60c";
 }
-.icon-quote2:before {
-	content: "\e61a";
-}
 .icon-bold:before {
 	content: "\e619";
 }
@@ -289,7 +112,4 @@
 }
 .icon-image:before {
 	content: "\e614";
-}
-.icon-code2:before {
-	content: "\e612";
 }
