--- a/h/templates/markdown.html
+++ b/h/templates/markdown.html
@@ -14,7 +14,8 @@
 		<a href="" class="markdown-tools-toggle" ng-click="togglePreview()" ng-show="preview">Write</a>
 	</span>
 </div>
-<textarea class="form-input form-textarea" ng-hide="readonly || preview"
+<textarea class="form-input form-textarea js-markdown-input"
+		  ng-hide="readonly || preview"
           ng-click="$event.stopPropagation()"
           ng-required="required" />
-<div class="styled-text" ng-class="preview && 'preview'" ng-dblclick="togglePreview()" ng-bind-html="rendered" ng-show="readonly || preview" />
+<div class="styled-text js-markdown-preview" ng-class="preview && 'preview'" ng-dblclick="togglePreview()" ng-bind-html="rendered" ng-show="readonly || preview" />
