--- a/h/templates/annotation.html
+++ b/h/templates/annotation.html
@@ -109,7 +109,7 @@
     ng-click="vm.reply()"
     ><i class="icon-reply"></i> Reply</a>
   <span class="magicontrol share-dialog-wrapper">
-    <a class="small dropdown-toggle" tooltip-trigger="vm.test" tooltip-html-unsafe="{{vm.shareMarkup()}}" href="#" title="Share"
+    <a class="small dropdown-toggle" href="#" title="Share"
       ><i class="icon-export"></i> Share</a>
     <span class="share-dialog" ng-click="$event.stopPropagation()">
       <a class="icon-export"
