Remove a few href="#"
In Angular, this is better expressed as href="" because that makes
Angular prevent the default automatically.

https://code.angularjs.org/1.1.5/docs/api/ng.directive:a

--- a/h/templates/annotation.html
+++ b/h/templates/annotation.html
@@ -112,7 +112,7 @@
     ng-click="vm.reply()"
     ><i class="icon-reply"></i> Reply</a>
   <span class="magicontrol share-dialog-wrapper">
-    <a class="small dropdown-toggle" href="#" title="Share"
+    <a class="small dropdown-toggle" href="" title="Share"
       ><i class="icon-export"></i> Share</a>
     <span class="share-dialog" ng-click="$event.stopPropagation()">
       <a class="icon-export"
