--- a/h/templates/annotation.html
+++ b/h/templates/annotation.html
@@ -9,7 +9,7 @@
        ng-href="{{baseURI}}u/{{vm.annotation.user}}"
        >{{vm.annotation.user | persona}}</a>
     <i class="small icon-locked" ng-show="vm.isPrivate()"></i>
-    <i class="small icon-highlighter" ng-show="vm.isHighlight()"></i>
+    <i class="small icon-highlighter" ng-show="vm.isHighlight() && !vm.editing"></i>
     <i class="small icon-comment" ng-show="vm.isComment()"></i>
     <span class="annotation-citation"
           ng-if="!vm.embedded"
