Show spinner on account and auth form submits
Close #1213

--- a/h/templates/account.html
+++ b/h/templates/account.html
@@ -38,7 +38,8 @@
 
       <div class="form-actions">
         <div class="form-actions-buttons">
-          <button class="btn" type="submit">Update</button>
+          <button class="btn" type="submit"
+                  status-button="changePasswordForm">Update</button>
         </div>
       </div>
     </form>
@@ -59,7 +60,8 @@
 
       <div class="form-actions">
         <div class="form-actions-buttons">
-          <button class="btn btn-danger" type="submit">Delete Account</button>
+          <button class="btn btn-danger" type="submit"
+                  status-button="deleteAccountForm">Delete Account</button>
         </div>
       </div>
     </form>
