--- a/h/templates/auth.html
+++ b/h/templates/auth.html
@@ -47,7 +47,8 @@
          >have an activation code?</a>
     </div>
     <div class="form-actions-buttons">
-      <button class="btn btn-primary" type="submit" name="login">Sign in</button>
+      <button class="btn btn-primary" type="submit" name="login"
+              status-button="login">Sign in</button>
     </div>
   </div>
 </form>
@@ -126,7 +127,8 @@
 
   <div class="form-actions">
     <div class="form-actions-buttons">
-      <button class="btn" type="submit" name="sign_up">Sign up</button>
+      <button class="btn" type="submit" name="sign_up"
+              status-button="register">Sign up</button>
     </div>
   </div>
 
@@ -159,7 +161,8 @@
 
   <div class="form-actions">
     <div class="form-actions-buttons">
-      <button class="btn" type="submit" name="forgot">Request access</button>
+      <button class="btn" type="submit" name="forgot"
+              status-button="forgot">Request access</button>
     </div>
   </div>
 </form>
@@ -210,7 +213,8 @@
 
   <div class="form-actions">
     <div class="form-actions-buttons">
-      <button class="btn" type="submit" name="activate">Activate</button>
+      <button class="btn" type="submit" name="activate"
+              status-button="activate">Activate</button>
     </div>
   </div>
 </form>
