--- a/h/templates/account.html
+++ b/h/templates/account.html
@@ -1,4 +1,4 @@
-<div class="tabbable" ng-controller="AccountManagement">
+<div class="tabbable" ng-controller="AccountController">
   <div class="tab-pane" title="Account">
     <form class="account-form form" name="changePasswordForm" ng-submit="submit(changePasswordForm)" novalidate form-validate>
       <h2 class="form-heading"><span>Change Your Password</span></h2>
