--- a/h/static/styles/threads.scss
+++ b/h/static/styles/threads.scss
@@ -13,6 +13,10 @@ $threadexp-width: .6em;
 
 .thread-list {
   margin-top: 0.5em;
+
+  .thread-collapsed {
+    .tag-list, .annotation-body {display: none;}
+  }
 }
 
 .thread {
